RESOLVED FIXED134872
[Cocoa] Include element snapshot in _WKActivatedElementInfo
https://bugs.webkit.org/show_bug.cgi?id=134872
Summary [Cocoa] Include element snapshot in _WKActivatedElementInfo
mitz
Reported 2014-07-13 12:13:18 PDT
Attachments
Add -[_WKActivatedElementInfo image] (13.72 KB, patch)
2014-07-13 12:22 PDT, mitz
sam: review+
mitz
Comment 1 2014-07-13 12:22:07 PDT
Created attachment 234831 [details] Add -[_WKActivatedElementInfo image]
WebKit Commit Bot
Comment 2 2014-07-13 12:24:43 PDT
Attachment 234831 [details] did not pass style-queue: ERROR: Source/WebKit2/UIProcess/API/Cocoa/_WKActivatedElementInfoInternal.h:31: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 10 files If any of these errors are false positives, please file a bug against check-webkit-style.
mitz
Comment 3 2014-07-13 12:40:18 PDT
Note You need to log in before you can comment on or make changes to this bug.