Source/WebKit2/WebProcess/WebPage/ios/WebPageIOS.mm
@@ -1849,6 +1849,11 @@ void WebPage::getPositionInformation(const IntPoint& point, InteractionInformati
                 linkElement = element;
                 elementIsLinkOrImage = true;
             }
+
+            if (elementIsLinkOrImage) {
+                // Ensure that the image contains at most 600K pixels, so that it is not too big.
+                info.image = snapshotNode(*element, SnapshotOptionsShareable, 600 * 1024)->bitmap();
+            }
             if (linkElement)
                 info.url = [(NSURL *)linkElement->document().completeURL(stripLeadingAndTrailingHTMLSpaces(linkElement->getAttribute(HTMLNames::hrefAttr))) absoluteString];
             info.title = element->fastGetAttribute(HTMLNames::titleAttr).string();
